--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#92A3FD</color>
     <color name="colorSecondary">#9DCEFF</color>
+    <color name="blue">#22a9f2</color>
     <color name="colorText">#1D1617</color>
     <color name="colorAccent">#C58BF2</color>
     <color name="colorWhite">#FFFFFFFF</color>
